test/files/neg/t5390d.check
t5390d.scala:7: error: forward reference to value a defined on line 8 extends over definition of value b
    val b = a.B.toString
            ^
1 error
